# piguard

./: Cargo.toml  LICENSE  README.md
articles/: 2026-03-24-piguard-python-vs-rust.md
knowledge/: atoms.jsonl  decisions.md  methodology.md
scripts/: export_onnx.py
src/: lib.rs  main.rs
