[package]
name = "piguard"
version = "0.2.0"
edition = "2021"
description = "Fast local prompt injection detector (PIGuard, DeBERTa-v3-base)"
license = "MIT"

[lib]
name = "piguard"
path = "src/lib.rs"

[[bin]]
name = "piguard"
path = "src/bin/piguard.rs"

[[bin]]
name = "piguard-server"
path = "src/bin/piguard-server.rs"

[dependencies]
ort = { version = "2.0.0-rc.12" }
tokenizers = { version = "0.21", features = ["http"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
anyhow = "1"
atty = "0.2"
ctrlc = "3"

[lints.rust]
missing_debug_implementations = "warn"
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
opt-level = 3
lto = true
strip = true
